Upgrade Merkle implementation to BLAKE3 (256-bit) and integrate with BCDB
Merkle & Hashing Updates:
- Switched hashing from MD5 (128-bit) to BLAKE3 (256-bit) for superior security/speed
- Integrated BLAKE3 source files in src/common/ and src/include/common/
- Updated MERKLE_VERSION to 4 in merkle.h
- Enhanced merkle_compute_row_hash to use BLAKE3
- Fixed Invalid TID handling in Merkle insert/util to prevent crashes during optimistic operations
- Fixed snapshot and tuple descriptor reference leaks in merkleverify.c

Integrated System Updates:
- Updated executor (nodeModifyTable.c, execMain.c) for tighter Merkle integration
- Synchronized BCDB worker and controller logic with Merkle verification
- Updated system catalogs (pg_proc.dat) and GUC settings
- Enhanced memory management (resowner.c) and snapshot management (snapmgr.c)

Scripts & Tooling:
- Revamped scripts/ folder with benchmark and test suites for BLAKE3 vs MD5
- Added detailed SQL workloads for insert/update/delete testing
- Updated demo.sql with new syntax and function signatures
- Updated README_MERKLE.md with BLAKE3 documentation and performance metrics

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -48,6 +48,9 @@ LIBS += $(PTHREAD_LIBS)
 
 OBJS_COMMON = \
 	base64.o \
+	blake3.o \
+	blake3_dispatch.o \
+	blake3_portable.o \
 	config_info.o \
 	controldata_utils.o \
 	d2s.o \
@@ -165,6 +168,12 @@ RYU_FILES = d2s.o f2s.o
 RYU_OBJS = $(RYU_FILES) $(RYU_FILES:%.o=%_shlib.o) $(RYU_FILES:%.o=%_srv.o)
 
 $(RYU_OBJS): CFLAGS += $(PERMIT_DECLARATION_AFTER_STATEMENT)
+
+# BLAKE3 portable-only build - disable all SIMD extensions for simplicity
+BLAKE3_FILES = blake3.o blake3_dispatch.o blake3_portable.o
+BLAKE3_OBJS = $(BLAKE3_FILES) $(BLAKE3_FILES:%.o=%_shlib.o) $(BLAKE3_FILES:%.o=%_srv.o)
+
+$(BLAKE3_OBJS): CFLAGS += -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512
 
 # kwlist_d.h is in the distribution tarball, so it is not cleaned here.
 clean distclean:
