--- a/src/backend/utils/misc/postgresql.conf.sample
+++ b/src/backend/utils/misc/postgresql.conf.sample
@@ -760,3 +760,7 @@ max_pred_locks_per_page =  512           # min 0
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+# AriaBC / Merkle index options
+#enable_merkle_index = on			# update Merkle indexes on DML
+#merkle_update_detection = off		# emit touched-node hash report at commit
