merkle: scale index builds; print roots inline in psql
Merkle CREATE INDEX/REINDEX no longer records per-tuple undo state or does per-row buffer traffic. Instead, we XOR row hashes into leaf nodes in memory, build internal nodes bottom-up once, and write the tree pages in a single pass. This avoids memory blowups and improves build stability for tables larger than RAM.

Update-detection output is consolidated to a single NOTICE with per-partition root hashes ("BCDB_MERKLE_ROOTS: (p, <hex>) ..."). psql captures that NOTICE and appends it to the following command tag line so output stays on one line, e.g. "UPDATE 1 , (0, <hex>)".

Also: add merkle_update_detection_suppress GUC (default on) for build-time reporting control; streamline row/key hashing to avoid StringInfo allocations; speed up verification similarly; BCDB worker/tx robustness fixes and new bcdb_last_committed_txid() helper; ignore generated *.log/*.md/*.diff and scripts/ via .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,11 @@ lib*.pc
 /src/.vscode/
 /.idea/
 *.bcdbtest
+
+# Exclude log, markdown, diff files
+*.log
+*.md
+*.diff
+
+# Exclude entire scripts directory
+/scripts/
